# ffi_test

./: pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/lone_wolf/ffi_test/: MainActivity.kt
lib/: main.dart
lib/src/c/: primes.c  primes.h
lib/src/pages/: home_page.dart
lib/src/python/: primes.py  primes.pyx  setup.py
lib/src/python/c_code/: bridge.c  bridge.h  primes.c  primes.h
